<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background3">
    
    
   	<LinearLayout
	   	android:id="@+id/bmi_height_ll"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_marginTop="45dp"
	   	android:layout_gravity="center"
	   	android:orientation="horizontal">
	   	
	    <TextView
	        android:id="@+id/BMI_height_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/BMI_height"
	        android:textColor="#FFFFFF" />
	
	    <EditText
	        android:id="@+id/BMI_height_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:ems="12"
	        android:inputType="numberDecimal"
	        android:maxLength="5" 
	        android:background="@null" >
	        <requestFocus />
	    </EditText>
	    
    </LinearLayout>
    
   	
	<LinearLayout
	   	android:id="@+id/bmi_weight_ll"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_marginTop="45dp"
	   	android:layout_gravity="center"
	   	android:orientation="horizontal">
	    
	    <TextView
	        android:id="@+id/BMI_weight_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/BMI_weight"
	        android:textColor="#FFFFFF" />
	    
	    <EditText
	        android:id="@+id/BMI_weight_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:ems="12"
	        android:inputType="numberDecimal"
	        android:maxLength="4" 
	       	android:maxWidth="10dp"
	       	android:background="@null"  >
	    </EditText>
    
    </LinearLayout>

    <Button
        android:id="@+id/button_BMI_calc"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:text="@string/button_BMI_calc"
        android:textColor="#FFFFFF" 
        android:layout_marginBottom="10dp" />
    
    <TextView
        android:id="@+id/BMI_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        android:text="@string/BMI"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />
    
    <TextView
        android:id="@+id/BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />
    
        <TextView
        android:id="@+id/BMI_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />
    

</LinearLayout>
