<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="fill"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:orientation="horizontal"
    android:baselineAligned="true">

    
    <LinearLayout
        android:id="@+id/left_fragment"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="9"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >
        
        
        <LinearLayout 
            android:id="@+id/name_tag_row"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
        
        <TextView 
	        android:id="@+id/food_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="9"
	        android:gravity="center_horizontal"
	        android:textColor="#5ca028"
	        android:textSize="24sp"
	        android:textStyle="bold" 	/>

        </LinearLayout>

        <ImageView
            android:id="@+id/nutrition_image"
            android:layout_width="246dp"
            android:layout_height="0dip"
            android:layout_weight="5"
            android:gravity="fill" />
        
        <TextView 
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:text="Description:"
             android:textColor="#FFFF0000"
             android:textSize="12sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"/>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:layout_marginTop="25dip"
        android:layout_weight="1"
        android:gravity="right|top"
        android:orientation="vertical" >


        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <LinearLayout
                android:id="@+id/measure_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_nutrition_measure"
                    android:textColor="#FFFF0000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/measure_per_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF0000"
                    android:layout_marginLeft="4dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            
            <LinearLayout
                android:id="@+id/protein_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" 
                android:layout_below="@id/measure_ll"
                android:layout_marginBottom="10dp">
	            <TextView
	                android:id="@+id/protein"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food_nutrition_protein"
	                android:textColor="#FFFF0000"
	                android:textSize="12sp"
	                android:textStyle="bold" />
            
              	<TextView
	                android:id="@+id/protein_g"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFF0000"
                    android:layout_marginLeft="4dp"
	                android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calories_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" 
                android:layout_below="@id/protein_ll"
                android:layout_marginBottom="10dp">
              	
	            <TextView
	                android:id="@+id/calories"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food_nutrition_calories"
	                android:textColor="#FFFF0000"
	                android:textSize="12sp"
	                android:textStyle="bold" />
	            
	           	<TextView
	                android:id="@+id/calories_g"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFF0000"
                    android:layout_marginLeft="4dp"
	                android:textSize="12sp"/>
            </LinearLayout>
            
            
           	<LinearLayout
                android:id="@+id/fat_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" 
                android:layout_below="@id/calories_ll"
                android:layout_marginBottom="10dp">

	            <TextView
	                android:id="@+id/fat"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food_nutrition_fat"
	                android:textColor="#FFFF0000"
	                android:textSize="12sp"
	                android:textStyle="bold" />
	            
	          	<TextView
		                android:id="@+id/fat_g"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
                    	android:textColor="#FFFF0000"
                    	android:layout_marginLeft="4dp"		                
		                android:textSize="12sp"/>
	          	
            </LinearLayout>

           	
          	<LinearLayout
                android:id="@+id/carb_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" 
                android:layout_below="@id/fat_ll"
                android:layout_marginBottom="10dp">
          	
	            <TextView
	                android:id="@+id/carb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food_nutrition_carbohydrate"
	                android:textColor="#FFFF0000"
	                android:textSize="12sp"
	                android:textStyle="bold" />
	            
	           	<TextView
		                android:id="@+id/carb_g"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="#FFFF0000"
                    	android:layout_marginLeft="4dp"
		                android:textSize="12sp"/>
            </LinearLayout>


          	<LinearLayout
                android:id="@+id/quantity_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" 
                android:layout_below="@id/carb_ll"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
           	
	            <TextView
	                android:id="@+id/quantity"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food_nutrition_quantity"
	                android:textColor="#FFFF0000"
	                android:textSize="12sp"
	                android:textStyle="bold" />
	            
<!-- 	            <EditText
	                android:id="@+id/food_quantity"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="4dp"
	                android:textColor="#FFFF0000"
	                android:ems="11"
	                android:inputType="number"
	                android:maxLength="3"
	                android:maxWidth="10dp"
	                android:background="@null" /> -->

	            <NumberPicker
	                android:id="@+id/food_quantity"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />

            </LinearLayout>
          	

            <Button
                android:id="@+id/button_select"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/button_select" />

            <Button
                android:id="@+id/button_cancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/button_select"
                android:layout_toRightOf="@id/button_select"
                android:text="@string/button_cancel" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
